--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "axios": "^1.7.9",
     "backend": "file:",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0",
     "child-process": "^1.0.2",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
+    "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "selenium-webdriver": "^4.34.0"
   }
 }
