--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "cheerio": "^1.0.0",
     "child-process": "^1.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^4.21.2",
     "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
